update logo and about.html

--- a/hostlist.html
+++ b/hostlist.html
@@ -14,7 +14,7 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="https://janetchenblog.wordpress.com/">Janet Chen Home Page</a>
+                        <a class="navbar-brand" href="https://slsn.info/">SLSNe List</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -64,18 +64,18 @@
             <th></th>
             <th></th>
             <th></th>
-            <th>M<sub>☉</sub></th>
+            <th>log(M<sub>☉</sub>)</th>
             <th></th>
             <th></th>
             <th></th>
+            <th>M<sub>☉</sub>/yr</th>
             <th></th>
             <th></th>
             <th></th>
+            <th>M<sub>☉</sub>/yr</th>
             <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
-            <th></th>
+            <th>Gyr^-1</th>
+            <th>Gyr^-1</th>
             <th></th>
             <th></th>
             <th></th>
@@ -4811,7 +4811,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <footer>
-                        <p>Last update: 2017-May-07 21:12 UTC</p>
+                        <p>Last update: 2017-May-07 21:52 UTC</p>
                         &copy; 2016 <a href="https://janetchenblog.wordpress.com/" target="_blank">Janet Chen</a> & Kai Sun
                     </footer>
                 </div>
