--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
                 <div class="container">
                     <!-- Brand and toggle get grouped for better mobile display -->
                     <div class="navbar-header">
-                        <a class="navbar-brand" href="https://slsn.info/">SLSNe List</a>
+                        <a class="navbar-brand" href="https://slsn.info/">SLSN INFO</a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -46,7 +46,7 @@
             <div class="row">
                 <div class="col-md-12">
                     <footer>
-                        <p>Last update: 2017-May-07 23:19 UTC</p>
+                        <p>Last update: 2017-May-08 07:43 UTC</p>
                         &copy; 2016 <a href="https://janetchenblog.wordpress.com/" target="_blank">Janet Chen</a> & Kai Sun
                     </footer>
                 </div>
